# grasping-benchmarks-panda

./: .gitignore  README.md  setup.py
docker/: run.sh
docker/6dgraspnet/: Dockerfile  bashrc  entrypoint.sh  setup.sh
docker/build_images/: Makefile  docker-compose.yml
docker/contactgraspnet/: Dockerfile  entrypoint.sh
docker/dexnet/: Dockerfile  entrypoint.sh  setup.sh
docker/gpd/: Dockerfile  entrypoint.sh
docker/panda_deps/: Dockerfile
docker/superquadrics_based/: Dockerfile  entrypoint.sh  setup.sh
docker/tools/: Dockerfile  QtCreatorSetup.js  qtaccount.ini  setup.sh
grasping_benchmarks/6dgraspnet/: 6dgraspnet_grasp_planner.py
grasping_benchmarks/base/: base_grasp_planner.py  grasp.py  transformations.py
grasping_benchmarks/dexnet/: dexnet_grasp_planner.py
grasping_benchmarks/dexnet/cfg/: fc_gqcnn_pj.yaml  gqcnn_pj.yaml
grasping_benchmarks/graspnet/: graspnetFuncs.py  graspnet_grasp_planner.py
grasping_benchmarks/graspnet/cfg/: cfg_graspnet.yaml  fc_gqcnn_pj.yaml  gqcnn_pj.yaml  graspnet_params.yaml
grasping_benchmarks/superquadric_based/: superquadrics_grasp_planner.py
grasping_benchmarks/superquadric_based/cfg/: config_panda.yaml
grasping_benchmarks_ros/: CMakeLists.txt  benchmark_ros_manager.py  package.xml  shape_completion.py  shape_completion_lundell.py
grasping_benchmarks_ros/dexnet_ros/: dexnet_grasp_planner_service.py
grasping_benchmarks_ros/dexnet_ros/cfg/: fc_gqcnn_pj.yaml  gqcnn_pj.yaml
grasping_benchmarks_ros/gpd_ros/: CMakeLists.txt
grasping_benchmarks_ros/gpd_ros/cfg/: ros_caffe_params.cfg  ros_caffe_params.cfg.bk  ros_eigen_params.cfg
grasping_benchmarks_ros/gpd_ros/include/gpd_ros/: gpd_grasp_planner_service.h  grasp_messages.h
grasping_benchmarks_ros/gpd_ros/src/gpd_ros/: gpd_grasp_planner_service.cpp  grasp_messages.cpp
grasping_benchmarks_ros/graspnet_ros/: graspnet_grasp_planner_service.py  python_pointclouds.py
grasping_benchmarks_ros/graspnet_ros/cfg/: cfg_graspnet.yaml
grasping_benchmarks_ros/launch/: grasp_planning_benchmark.launch
grasping_benchmarks_ros/msg/: BenchmarkGrasp.msg
grasping_benchmarks_ros/srv/: GraspPlanner.srv  GraspPlannerCloud.srv  GraspPlannerImageAndCloud.srv  UserCmd.srv
grasping_benchmarks_ros/superquadric_based_ros/: superq_grasp_planner_service.py
grasping_benchmarks_ros/superquadrics_based_ros/: superq_grasp_planner_service.py
grasping_benchmarks_ros/superquadrics_based_ros/cfg/: config_panda.yaml
panda_grasp_srv/: CMakeLists.txt  package.xml
panda_grasp_srv/srv/: PandaGrasp.srv  UserCmd.srv
panda_simple_grasp_service/: CMakeLists.txt  package.xml  simple_action_server.py
tabletop_segment/: CMakeLists.txt  package.xml  visualization.rviz
tabletop_segment/src/: main.cpp
